ingress_new/example_with_1_path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx #add to specify the IngressClass. You can find the name in spec of "ingress-nginx-controller" deployment
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: web-nginx
            port:
              number: 80
