ingress_new/one_backend_ingress.yaml
# this is ingress rule with access using IP of nginx-controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-backand-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # in new ver of ingress controller you should add this annotation to specify the IngressClass.
                                         # w/o this it wont work and you will have 404 
spec:
  defaultBackend:
    service:
      name: web-apache
      port:
        number: 80

# check using for example curl:
# curl <nginx-controller-ip>
